# numerize_denumerize

./: LICENSE  README.md  pyproject.toml
src/numerize_denumerize/: __init__.py  _suffixes.py  denumerize.py  numerize.py
tests/: test_denumerize.py  test_numerize.py
