[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "numerize_denumerize"
version = "0.0.4"
authors = [
  { name="Dheeresh Agarwal", email="da11@iitbbs.ac.in" },
]
description = "A simple and better version of numerize package that also denumerizes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dheereshagrwal/numerize_denumerize"
"Bug Tracker" = "https://github.com/dheereshagrwal/numerize_denumerize/issues"